2003-11-11  Dmitry Semyonov <Dmitry.Semyonov@oktet.ru>

	* configure.in: Add support for arm-wince-pe target.
	* configure: Regenerate.

2003-11-11  Jan Hubicka  <jh@suse.cz>

	* config/tc-i386.c (tc_i386_fix_adjustable):

2003-11-10  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ia64.c (ia64_handle_align): Remove bogus be_nop.

2003-11-10  Alan Modra  <amodra@bigpond.net.au>

	* README: Update bug report address.  Move bug reporting info to
	binutils/README.

2003-11-07  Christian Groessler  <chris@groessler.org>

	* doc/c-z8k.texi: Document command-line options.  Fix byte
	register names.  Document '.z8001' and '.z8002' directives.
	Extend addressing modes documentation.

2003-11-07  Jonathan R. Grant  <jg-binutils@jguk.org>

	* input-file.c (input_file_open): Use "No such file" error
	message.

2003-11-06  Pete Gonzalez  <pgonzalez@bluel.com>

	* config/tc-arm.texi (struct reg_entry): Add new field 'builtin'.
	(rn_table, iwmmxt_table, cp_table, cn_table, fn_table, sn_table,
	dn_table, mav_mvf_table, mac_mvd_table, mav_mvfx_table,
	mav_mvax_table, mav_dspc_table): Initialise new field.
	(insert_reg_alias): Initialise new field.
	(md_pseudo_table): Add "unreq" entry.
	(s_unreq): New function: Undo the effects of a previous .req.
	* doc/c-arm.texi: Document new pseudo op.
	* NEWS: Mention new feature.

2003-11-06  Bruno Rohee  <bruno@rohee.com>

	* config/obj-vms.c: Fix "the the" typo.
	* doc/c-arm.texi: Likewise.

2003-11-06  Nick Clifton  <nickc@redhat.com>

	* config/obj-vms.c: Convert to ISO-C.

2003-11-05  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.h (TC_FORCE_RELOCATION): Only define for ELF and XCOFF.

2003-10-31  Christian Groessler  <chris@groessler.org>

	* config/tc-i860.c (md_pcrel_from): Fix typo in comment.

2003-10-29  Phil Edwards  <phil@codesourcery.com>

	* configure.in (arm-*-vxworks, i386-*-vxworks, mips-*-vxworks,
	ppc-*-vxworks, ppc-*-windiss):  Remove separate outdated stanzas.