@@ -68,6 +68,7 @@ as.dvi: $(srcdir)/as.texinfo asconfig.texi gasver.texi $(CPU_DOCS)
 # We want install to imply install-info as per GNU standards, despite the
 # cygnus option.
 install: install-info
+install-info: install-info-am
 
 # This one isn't ready for prime time yet.  Not even a little bit.
 
