@@ -1,3 +1,12 @@
+2003-11-12  Daniel Jacobowitz  <drow@mvista.com>
+
+	* Makefile.am (install, install-info, RECURSIVE_TARGETS): Define.
+	* doc/Makefile.am (install-info): Define.
+
+	* aclocal.m4: Regenerate.
+	* Makefile.in: Regenerate.
+	* doc/Makefile.in: Regenerate.
+
 2003-11-11  Dmitry Semyonov <Dmitry.Semyonov@oktet.ru>
 
 	* configure.in: Add support for arm-wince-pe target.
